offers picture retreived

--- a/bakery.html
+++ b/bakery.html
@@ -50,7 +50,7 @@
       on our mini and regular sized mince pies.</p>
       <img class="mincepiesunderline" src="pics/mincepiesunderline.jpg" width="100%"/>
       <br  />
-      <img class="offerlist" src="pics/offers.png" alt="offers" />
+      <img class="offerlist" src="pics/offers.jpg" alt="offers" height="200" width="270"/>
 
 
 <br />
